Fix navbar clipping e miglioramento CLS hero section
- Risolto clipping del selettore lingua e bottone Contattaci rimuovendo contain: layout style dalla navbar
- Ridotte dimensioni bottone Contattaci e selettori lingua su desktop per layout più compatto
- Sostituita soluzione CLS rigida (700px fissi) con layout flessibile basato su min-height calcolati
- Migliorata responsività della hero section con altezze adattive alla viewport
- Aggiornate informazioni aziende partner nelle sezioni dedicate dei servizi
- Ottimizzato design sezioni partner con layout a griglia e stili migliorati

--- a/ai-content-optimization.html
+++ b/ai-content-optimization.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="faq-item" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-                <h3 itemprop="name">Come scegliere la classe di resistenza giusta per porte blindate?</h3>
+                <h3 itemprop="name">Come scegliere la classe di resistenza giusta per porte e finestre per porte e finestre?</h3>
                 <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
                     <div itemprop="text">
                         <p>La scelta della <strong>classe di resistenza RC</strong> dipende dal livello di rischio e dal tipo di immobile:</p>
@@ -150,8 +150,8 @@
             </div>
 
             <div class="expertise-item">
-                <h3>Serramenti di Sicurezza</h3>
-                <p>Progettazione e installazione di porte blindate, finestre antieffrazione e sistemi di chiusura ad alta sicurezza certificati.</p>
+                <h3>Grate e Inferriate blindate</h3>
+                <p>Progettazione e installazione di grate e inferriate blindate per porte e finestre per massimizzare la sicurezza passiva</p>
                 <ul>
                     <li>Certificazioni classe RC2, RC3, RC4, RC5</li>
                     <li>Serrature europee e doppia mappa</li>
