--- a/debug-buttons.html
+++ b/debug-buttons.html
@@ -28,9 +28,9 @@
                         <div class="service-icon">
                             <img src="icons/serramenti.webp" alt="Icona Serramenti" width="55" height="55">
                         </div>
-                        <h3>Serramenti Blindati</h3>
-                        <p>Porte blindate, finestre di sicurezza e serramenti antieffrazione di ultima generazione.</p>
-                        <a href="serramenti.html" class="service-link" onclick="console.log('Bottone Serramenti cliccato!'); alert('Bottone Serramenti funziona!');">Scopri di più</a>
+                        <h3>Grate e Inferriate Blindate</h3>
+                        <p>Grate e inferriate blindate antieffrazione di ultima generazione per massima sicurezza.</p>
+                        <a href="serramenti.html" class="service-link" onclick="console.log('Bottone Grate e Inferriate cliccato!'); alert('Bottone Grate e Inferriate funziona!');">Scopri di più</a>
                     </div>
                     <div class="service-card sorveglianza-card">
                         <div class="service-icon">
