--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -70,7 +70,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            contain: layout style;
+            /* contain: layout style; */ /* Rimossa: causava problemi di overflow nella navbar */
             /* PREVENZIONE LAYOUT SHIFT AGGIUNTIVA */
             will-change: auto;
             backface-visibility: hidden;
@@ -113,11 +113,11 @@
         }
         .partnership-carousel {
             min-height: 160px;
-            contain: layout style;
+            /* contain: layout style; */ /* Rimossa: causava problemi di overflow */
         }
         .allarmi-carousel .carousel-container {
             min-height: 400px;
-            contain: layout style;
+            /* contain: layout style; */ /* Rimossa: causava problemi di overflow */
         }
     </style>
 </head>
@@ -146,7 +146,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="nebbiogeni.html" class="nav-link" data-translate="nav-nebbiogeni" title="Sistemi nebbiogeni professionali per la sicurezza">Nebbiogeni</a></li>
-                        <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti" title="Serramenti blindati e porte di sicurezza">Serramenti</a></li>
+                        <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti" title="Grate e inferriate blindate per porte e finestre">Grate e Inferriate blindate</a></li>
                         <li><a href="sorveglianza.html" class="nav-link" data-translate="nav-sorveglianza" title="Sistemi di videosorveglianza intelligente">Sorveglianza</a></li>
                         <li><a href="allarmi.html" class="nav-link" data-translate="nav-allarmi" title="Sistemi di allarme intelligenti">Allarmi</a></li>
                         <li><a href="lavora-con-noi.html" class="nav-link" data-translate="nav-lavora-con-noi" title="Opportunità di lavoro e carriera">Lavora con noi</a></li>
@@ -279,7 +279,7 @@
                     <h3 data-translate="footer-services-title">Servizi</h3>
                     <ul>
                         <li><a href="nebbiogeni.html" data-translate="footer-service-1">Sistemi Nebbiogeni</a></li>
-                        <li><a href="serramenti.html" data-translate="footer-service-2">Serramenti di Sicurezza</a></li>
+                        <li><a href="serramenti.html" data-translate="footer-service-2">Grate e Inferriate di Sicurezza</a></li>
                         <li><a href="sorveglianza.html" data-translate="footer-service-3">Videosorveglianza</a></li>
                         <li><a href="allarmi.html" data-translate="footer-service-4">Sistemi di Allarme</a></li>
                     </ul>
