--- a/test-buttons.html
+++ b/test-buttons.html
@@ -22,10 +22,10 @@
             
             <div class="service-card">
                 <div class="service-icon">
-                    <img src="icons/serramenti.webp" alt="Icona Serramenti" width="55" height="55">
+                    <img src="icons/grate-inferriate.webp" alt="Icona Grate e Inferriate" width="55" height="55">
                 </div>
-                <h3>Serramenti Blindati</h3>
-                <p>Test descrizione per verificare il funzionamento del bottone.</p>
+                <h3>Grate e Inferriate Blindate</h3>
+                <p>Protezione fisica massima per porte e finestre</p>
                 <a href="serramenti.html" class="service-link" onclick="alert('Bottone cliccato! Reindirizzamento a serramenti.html'); return true;">Scopri di più</a>
             </div>
         </div>
