--- a/test-chi-siamo-buttons.html
+++ b/test-chi-siamo-buttons.html
@@ -65,7 +65,7 @@
                 <li>Prova a cliccare sui 4 bottoni "Scopri di più":</li>
                 <ul>
                     <li>Sistemi Nebbiogeni → nebbiogeni.html</li>
-                    <li>Serramenti Blindati → serramenti.html</li>
+                    <li>Grate e Inferriate Blindate → serramenti.html</li>
                     <li>Videosorveglianza → sorveglianza.html</li>
                     <li>Sistemi di Allarme → allarmi.html</li>
                 </ul>
