--- a/allarmi.html
+++ b/allarmi.html
@@ -93,8 +93,8 @@
         /* Stili critici di base */
         :root{--primary-color:#4caf50;--primary-light:#66bb6a;--text-black:#000;--white:#fff;--text-light:#b0b0b0}
         *,:after,:before{margin:0;padding:0;box-sizing:border-box}
-        body{background:var(--text-black);color:var(--white);font-family:'Inter','Inter Fallback',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;line-height:1.6;padding-top:82px;min-height:100vh}
-        .header{position:fixed;top:0;left:0;right:0;height:82px;min-height:82px;background:linear-gradient(135deg,rgba(0,0,0,.95),rgba(26,26,26,.95));backdrop-filter:blur(10px);-webkit-backdrop-filter:blur(10px);border-bottom:1px solid rgba(76,175,80,.2);z-index:9999;transition:background .3s ease,transform .3s ease}
+        body{background:var(--text-black);color:var(--white);font-family:'Inter','Inter Fallback',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;line-height:1.6;padding-top:110px;min-height:100vh}
+.header{position:fixed;top:0;left:0;right:0;height:110px;min-height:110px;background:linear-gradient(135deg,rgba(0,0,0,.95),rgba(26,26,26,.95));backdrop-filter:blur(10px);-webkit-backdrop-filter:blur(10px);border-bottom:1px solid rgba(76,175,80,.2);z-index:9999;transition:background .3s ease,transform .3s ease;overflow:visible}
         .nav-container{max-width:1200px;margin:0 auto;padding:0 2rem;display:flex;justify-content:space-between;align-items:center;height:100%}
         .logo-link{display:flex;align-items:center;gap:.75rem;color:inherit;text-decoration:none}
         .logo-image{width:50px;height:50px}
@@ -149,7 +149,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            contain: layout style;
+            /* contain: layout style; */ /* Rimossa: causava problemi di overflow nella navbar */
             /* PREVENZIONE LAYOUT SHIFT AGGIUNTIVA */
             will-change: auto;
             backface-visibility: hidden;
@@ -192,11 +192,11 @@
         }
         .partnership-carousel {
             min-height: 160px;
-            contain: layout style;
+            /* contain: layout style; */ /* Rimossa: causava problemi di overflow */
         }
         .allarmi-carousel .carousel-container {
             min-height: 400px;
-            contain: layout style;
+            /* contain: layout style; */ /* Rimossa: causava problemi di overflow */
         }
     </style>
     
@@ -537,7 +537,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="nebbiogeni.html" class="nav-link" data-translate="nav-nebbiogeni" title="Sistemi nebbiogeni professionali per la sicurezza">Nebbiogeni</a></li>
-                        <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti" title="Serramenti blindati e porte di sicurezza">Serramenti</a></li>
+                        <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti" title="Grate e inferriate blindate per porte e finestre">Grate e Inferriate</a></li>
                         <li><a href="sorveglianza.html" class="nav-link" data-translate="nav-sorveglianza" title="Sistemi di videosorveglianza intelligente">Sorveglianza</a></li>
                         <li><a href="allarmi.html" class="nav-link" data-translate="nav-allarmi" title="Sistemi di allarme intelligenti">Allarmi</a></li>
                         <li><a href="lavora-con-noi.html" class="nav-link" data-translate="nav-lavora-con-noi" title="Opportunità di lavoro e carriera">Lavora con noi</a></li>
@@ -935,7 +935,7 @@
                     <h3 data-translate="footer-services-title">Servizi</h3>
                     <ul>
                         <li><a href="nebbiogeni.html" data-translate="footer-service-nebbiogeni">Sistemi Nebbiogeni</a></li>
-                        <li><a href="serramenti.html" data-translate="footer-service-serramenti">Serramenti di Sicurezza</a></li>
+                        <li><a href="serramenti.html" data-translate="footer-service-serramenti">Grate e Inferriate Blindate</a></li>
                         <li><a href="sorveglianza.html" data-translate="footer-service-sorveglianza">Videosorveglianza</a></li>
                         <li><a href="allarmi.html" data-translate="footer-service-allarmi">Sistemi di Allarme</a></li>
                     </ul>
