--- a/lavora-con-noi.html
+++ b/lavora-con-noi.html
@@ -67,9 +67,9 @@
         
         :root{--primary-color:#4caf50;--primary-light:#66bb6a;--text-black:#000;--white:#fff;--text-light:#b0b0b0}
         *,:after,:before{margin:0;padding:0;box-sizing:border-box}
-        body{background:var(--text-black);color:var(--white);font-family:'Inter','Inter Fallback',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;line-height:1.6;padding-top:82px;min-height:100vh}
-        .header{position:fixed;top:0;left:0;right:0;height:82px;min-height:82px;background:linear-gradient(135deg,rgba(0,0,0,.95),rgba(26,26,26,.95));backdrop-filter:blur(10px);-webkit-backdrop-filter:blur(10px);border-bottom:1px solid rgba(76,175,80,.2);z-index:9999;transition:background .3s ease,transform .3s ease}
-        .nav-container{max-width:1200px;margin:0 auto;padding:0 10px;display:flex;justify-content:space-between;align-items:center;height:100%}
+        body{background:var(--text-black);color:var(--white);font-family:'Inter','Inter Fallback',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;line-height:1.6;padding-top:110px;min-height:100vh}
+.header{position:fixed;top:0;left:0;right:0;height:110px;min-height:110px;background:linear-gradient(135deg,rgba(0,0,0,.95),rgba(26,26,26,.95));backdrop-filter:blur(10px);-webkit-backdrop-filter:blur(10px);border-bottom:1px solid rgba(76,175,80,.2);z-index:9999;transition:background .3s ease,transform .3s ease;overflow:visible}
+        .nav-container{max-width:1200px;margin:0 auto;padding:0 2rem;display:flex;justify-content:space-between;align-items:center;height:100%}
         .logo-link{display:flex;align-items:center;gap:.75rem;color:inherit;text-decoration:none}
         .logo-image{width:50px;height:50px}
         .logo-title{font-size:1.8rem;font-weight:700;color:#fff;margin:0}
@@ -409,7 +409,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="nebbiogeni.html" class="nav-link" data-translate="nav-nebbiogeni" title="Sistemi nebbiogeni professionali per la sicurezza">Nebbiogeni</a></li>
-                    <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti" title="Serramenti blindati e porte di sicurezza">Serramenti</a></li>
+                    <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti" title="Grate e inferriate blindate per porte e finestre">Grate e Inferriate</a></li>
                     <li><a href="sorveglianza.html" class="nav-link" data-translate="nav-sorveglianza" title="Sistemi di videosorveglianza intelligente">Sorveglianza</a></li>
                     <li><a href="allarmi.html" class="nav-link" data-translate="nav-allarmi" title="Sistemi di allarme intelligenti">Allarmi</a></li>
                     <li><a href="lavora-con-noi.html" class="nav-link" data-translate="nav-lavora-con-noi" title="Opportunità di lavoro e carriera">Lavora con noi</a></li>
@@ -638,7 +638,7 @@
                     <h4 data-translate="footer-services-title">Servizi</h4>
                     <ul>
                         <li><a href="nebbiogeni.html" data-translate="footer-service-nebbiogeni" title="Scopri i nostri sistemi nebbiogeni professionali per la protezione immediata">Sistemi Nebbiogeni</a></li>
-                        <li><a href="serramenti.html" data-translate="footer-service-serramenti" title="Esplora i nostri serramenti blindati e porte di sicurezza ad alta protezione">Serramenti Blindati</a></li>
+                        <li><a href="serramenti.html" data-translate="footer-service-serramenti" title="Esplora le nostre grate e inferriate blindate per la massima protezione">Grate e Inferriate Blindate</a></li>
                         <li><a href="sorveglianza.html" data-translate="footer-service-sorveglianza" title="Scopri i nostri sistemi di videosorveglianza avanzati con tecnologia 4K">Videosorveglianza</a></li>
                         <li><a href="allarmi.html" data-translate="footer-service-allarmi" title="Esplora i nostri sistemi di allarme intelligenti per la massima sicurezza">Sistemi di Allarme</a></li>
                     </ul>
