Fix: Risolte segnalazioni Google Search Console - Redirect 404, blocco pagine duplicate, noindex termini

--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Termini e condizioni di utilizzo del sito web FB Total Security. Informazioni sui diritti e doveri degli utenti.">
     <meta name="keywords" content="termini condizioni, privacy policy, FB Total Security, sicurezza Milano">
     <meta name="author" content="FB Total Security">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="noindex, follow">
     <meta name="language" content="IT">
     <meta name="geo.region" content="IT-25">
     <meta name="geo.placename" content="Milano">
