Feat: Integrato logo CIVIS S.p.A in homepage e sorveglianza, aggiornati tutti gli schema e metadati AI

--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@
             "Nebbiogeni antifurto",
             "Grate e inferriate blindate", 
             "Videosorveglianza",
+            "Videosorveglianza CIVIS S.p.A",
+            "Vigilanza privata CIVIS S.p.A",
             "Allarmi wireless",
             "Sicurezza domestica",
             "Sicurezza aziendale",
@@ -288,6 +290,7 @@
             "Sicurezza perimetrale",
             "Controllo accessi",
             "Monitoraggio remoto",
+            "Monitoraggio H24 CIVIS",
             "Intelligenza artificiale per sicurezza",
             "Analisi comportamentale",
             "Riconoscimento facciale",
@@ -296,7 +299,9 @@
             "Sicurezza negozi",
             "Sicurezza uffici",
             "Prevenzione crimini",
-            "Tecnologie di sicurezza"
+            "Tecnologie di sicurezza",
+            "Istituto vigilanza privata",
+            "CIVIS S.p.A"
           ],
           "hasCredential": [
             {
@@ -614,7 +619,12 @@
             "itemOffered": {
               "@type": "Service",
               "name": "Videosorveglianza",
-              "description": "Sistemi di videosorveglianza IP e monitoraggio"
+              "description": "Sistemi di videosorveglianza IP e monitoraggio in partnership con CIVIS S.p.A",
+              "provider": {
+                "@type": "Organization",
+                "name": "CIVIS S.p.A",
+                "description": "Istituto di Vigilanza Privata leader nel settore"
+              }
             }
           },
           {
@@ -884,7 +894,7 @@ img {
             <div class="partnership-carousel">
                 <div class="carousel-track">
                     <div class="partner-logo">
-                        <div style="width: 80px; height: 26px; background: linear-gradient(135deg, #1e3a8a, #3b82f6); border-radius: 4px; display: flex; align-items: center; justify-content: center; color: white; font-size: 10px; font-weight: bold;">VIGILANZA</div>
+                        <img src="icons/CIVIS-logo-carosello-homepage.svg" alt="CIVIS S.p.A Logo" loading="lazy" width="80" height="26">
                     </div>
                     <div class="partner-logo">
                         <img src="icons/itlgroup-logo-carosello-homepage_small.webp" alt="ITL Group Logo" loading="lazy" width="67" height="26">
@@ -897,11 +907,7 @@ img {
                     </div>
                     <!-- Duplicati per loop seamless -->
                     <div class="partner-logo">
-                        <svg width="80" height="26" viewBox="0 0 80 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="80" height="26" rx="4" fill="#f3f4f6"/>
-                            <rect x="8" y="8" width="64" height="10" rx="2" fill="#d1d5db"/>
-                            <text x="40" y="17" text-anchor="middle" font-family="Arial, sans-serif" font-size="8" fill="#6b7280">PARTNER</text>
-                        </svg>
+                        <img src="icons/CIVIS-logo-carosello-homepage.svg" alt="CIVIS S.p.A Logo" loading="lazy" width="80" height="26">
                     </div>
                     <div class="partner-logo">
                         <img src="icons/itlgroup-logo-carosello-homepage_small.webp" alt="ITL Group Logo" loading="lazy" width="67" height="26">
