--- a/sorveglianza.html
+++ b/sorveglianza.html
@@ -470,11 +470,16 @@
                     "@type": "Offer",
                     "itemOffered": {
                         "@type": "Service",
-                        "name": "CIVIS - Sistemi Videosorveglianza Avanzata",
-                        "description": "Tecnologie all'avanguardia per la videosorveglianza professionale con sistemi integrati di ultima generazione.",
+                        "name": "CIVIS S.p.A - Sistemi Videosorveglianza Avanzata",
+                        "description": "CIVIS S.p.A offre tecnologie all'avanguardia per la videosorveglianza professionale con sistemi integrati di ultima generazione, monitoraggio H24 e servizi di vigilanza privata.",
                         "brand": {
                             "@type": "Brand",
-                            "name": "CIVIS"
+                            "name": "CIVIS S.p.A"
+                        },
+                        "provider": {
+                            "@type": "Organization",
+                            "name": "CIVIS S.p.A",
+                            "description": "Istituto di Vigilanza Privata leader nel settore sicurezza e videosorveglianza"
                         }
                     }
                 },
@@ -816,14 +821,12 @@
             <div class="partners-grid">
                 <div class="partner-card featured-partner">
                     <div class="partner-logo">
-                        <div class="partner-logo-placeholder"
-                            style="width: 80px; height: 26px; background: linear-gradient(135deg, #1a365d, #2d5a87); border-radius: 4px; display: flex; align-items: center; justify-content: center; color: white; font-size: 10px; font-weight: bold;">
-                            VIGILANZA</div>
+                        <img src="icons/CIVIS-copertina-optimized.webp" alt="CIVIS S.p.A Logo" loading="lazy" width="200" height="67">
                     </div>
                     <div class="partner-info">
-                        <h3 data-translate="sorveglianza-partner-title">Istituto di Vigilanza Privata Leader Assoluto
+                        <h3 data-translate="sorveglianza-partner-title">CIVIS S.p.A - Istituto di Vigilanza Privata Leader Assoluto
                             nel Proprio Settore</h3>
-                        <p data-translate="sorveglianza-partner-desc">Istituto di vigilanza privata con esperienza
+                        <p data-translate="sorveglianza-partner-desc">CIVIS S.p.A è un istituto di vigilanza privata con esperienza
                             consolidata nel settore della sicurezza e videosorveglianza professionale. Offriamo
                             soluzioni complete per privati e aziende in tutta Italia con tecnologie avanzate,
                             monitoraggio H24 e servizi specializzati per garantire massima protezione e tranquillità.
