Fix: Corretto riferimento logo CIVIS in sorveglianza.html - usato CIVIS-logo-carosello-homepage.svg

--- a/sorveglianza.html
+++ b/sorveglianza.html
@@ -821,7 +821,7 @@
             <div class="partners-grid">
                 <div class="partner-card featured-partner">
                     <div class="partner-logo">
-                        <img src="icons/CIVIS-copertina-optimized.webp" alt="CIVIS S.p.A Logo" loading="lazy" width="200" height="67">
+                        <img src="icons/CIVIS-logo-carosello-homepage.svg" alt="CIVIS S.p.A Logo" loading="lazy" width="80" height="26">
                     </div>
                     <div class="partner-info">
                         <h3 data-translate="sorveglianza-partner-title">CIVIS S.p.A - Istituto di Vigilanza Privata Leader Assoluto
