Update: Sostituita email postmaster@fbtotalsecurity.com con fb.totalsicurezza@gmail.com in tutti i file

--- a/allarmi.html
+++ b/allarmi.html
@@ -447,7 +447,7 @@
             "@type": "Person",
             "name": "FB Total Security",
     
-            "email": "postmaster@fbtotalsecurity.com",
+            "email": "fb.totalsicurezza@gmail.com",
             "address": {
                 "@type": "PostalAddress",
                 "streetAddress": "Corso Sempione",
@@ -903,7 +903,7 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-details">
                             <h3 data-translate="contact-email-title">Email</h3>
-                            <p><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></p>
+                            <p><a href="mailto:fb.totalsicurezza@gmail.com">fb.totalsicurezza@gmail.com</a></p>
                         </div>
                     </div>
                     
@@ -993,7 +993,7 @@
                     <h3 data-translate="footer-contacts-title">Contatti</h3>
                     <ul>
 
-                        <li><a href="mailto:postmaster@fbtotalsecurity.com" data-translate="footer-email">📧 postmaster@fbtotalsecurity.com</a></li>
+                        <li><a href="mailto:fb.totalsicurezza@gmail.com" data-translate="footer-email">📧 fb.totalsicurezza@gmail.com</a></li>
                         <li data-translate="footer-address">📍 Corso Sempione, Milano (MI)</li>
 
                     </ul>
