--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -295,7 +295,7 @@
                 <div class="footer-section">
                     <h3 data-translate="footer-contacts-title">Contatti</h3>
                     <p data-translate="footer-location">📍 Tutta Italia</p>
-                    <p><a href="mailto:postmaster@fbtotalsecurity.com" data-translate="footer-email">✉️ postmaster@fbtotalsecurity.com</a></p>
+                    <p><a href="mailto:fb.totalsicurezza@gmail.com" data-translate="footer-email">✉️ fb.totalsicurezza@gmail.com</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
