--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -506,7 +506,7 @@
                             </svg>
                             <div>
                                 <h3 data-translate="contact-email-title">Email</h3>
-                                <p><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></p>
+                                <p><a href="mailto:fb.totalsicurezza@gmail.com">fb.totalsicurezza@gmail.com</a></p>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -613,7 +613,7 @@
                     <h4 data-translate="footer-contacts-title">Contatti</h4>
                     <ul>
 
-                        <li><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></li>
+                        <li><a href="mailto:fb.totalsicurezza@gmail.com">fb.totalsicurezza@gmail.com</a></li>
                         <li data-translate="footer-service-area">Tutta Italia</li>
                     </ul>
                 </div>
