--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             {
               "@type": "ContactPoint",
               "contactType": "customer service",
-              "email": "postmaster@fbtotalsecurity.com",
+              "email": "fb.totalsicurezza@gmail.com",
               "availableLanguage": ["Italian", "English"],
               "hoursAvailable": "Mo-Fr 09:00-18:00"
             },
@@ -583,7 +583,7 @@
         "@type": "ContactPoint",
         "telephone": "+393802647367",
         "contactType": "customer service",
-        "email": "postmaster@fbtotalsecurity.com",
+        "email": "fb.totalsicurezza@gmail.com",
         "availableLanguage": "Italian"
       },
       "address": {
@@ -1287,7 +1287,7 @@ img {
                                 </svg>
                                 <div>
                                     <h3 data-translate="contact-email-label">Email</h3>
-                                    <p><a href="mailto:postmaster@fbtotalsecurity.com" title="Invia una email a FB Total Security per informazioni e preventivi">postmaster@fbtotalsecurity.com</a></p>
+                                    <p><a href="mailto:fb.totalsicurezza@gmail.com" title="Invia una email a FB Total Security per informazioni e preventivi">fb.totalsicurezza@gmail.com</a></p>
                                 </div>
                             </div>
                             <div class="contact-item">
@@ -1554,7 +1554,7 @@ img {
                     <h4 data-translate="footer-contacts-title">Contatti</h4>
                     <ul>
 
-                        <li><a href="mailto:postmaster@fbtotalsecurity.com" title="Invia una email a FB Total Security per informazioni e preventivi">postmaster@fbtotalsecurity.com</a></li>
+                        <li><a href="mailto:fb.totalsicurezza@gmail.com" title="Invia una email a FB Total Security per informazioni e preventivi">fb.totalsicurezza@gmail.com</a></li>
                         <li data-translate="footer-service-area">Tutta Italia</li>
                     </ul>
                 </div>
